Fix collection menu get stuck under skeleton

--- a/src/styles/collectionMenu.scss
+++ b/src/styles/collectionMenu.scss
@@ -14,6 +14,7 @@
 
         @include m.mobile {
             display: block;
+            z-index: 2;
             position: fixed;
             bottom: 1.5rem;
             left: 1.5rem;
